#8187 closed bug (fixed)
Transmission-daemon causes KDL when launched
Reported by: | MichaelPeppers | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev43375, to reproduce just type "transmission-daemon" in a terminal window. The KDL is about some "_mutex_unlock() issues". It is quite a nasty one too as keyboard seems non-functional when it happens so the only thing I can do is a hard reboot. A clean syslog and (hopefully) a screenshot are coming soon.
Attachments (1)
Change History (14)
comment:1 by , 13 years ago
Component: | Applications/Command Line Tools → System/Kernel |
---|---|
Owner: | changed from | to
comment:3 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:4 by , 13 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Actually, invoking "transmission-daemon" still KDL's on hrev43414.
comment:5 by , 13 years ago
Cannot reproduce it in Virtualbox using hrev43413... will test it in real hardware ASAP.
comment:6 by , 13 years ago
by , 13 years ago
Attachment: | haiku-r43413_transmission-daemon_kdl.jpg added |
---|
follow-up: 9 comment:7 by , 13 years ago
comment:8 by , 13 years ago
@mmlr: You had the right idea with hrev43405, but the line needs to be moved before the definition of the respective auto locker. Otherwise the reference is released before unlocking.
comment:9 by , 13 years ago
Replying to mmlr:
Are you absolutely sure that this actually is hrev43413? It looks like exactly the bug I fixed in hrev43405 and I was unable to reproduce it in a downloaded nightly inside VirtualBox.
Indeed it is. I did multiple fresh installs using both the iso and raw nightly images. transmission-daemon still KDL.
comment:11 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed correctly in hrev43463.
comment:13 by , 13 years ago
Commented to soon. Less than a few hours after I said the issue was fixed, transmission-daemon crashes my system. Will set up a vm to test.
Changing component to kernel. Might be a network stack/driver issue, though. A stack trace would be very welcome.